# charge-intel-canada

./: .env.example  .gitignore  DEVELOPMENT_PLAN.md  LICENSE  README.md  SCOPE.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml  pr_checks.yml  weekly_refresh.yml
dashboard/: app.py
dashboard/assets/: style.css
dashboard/pages/: 01_coverage_map.py  02_coverage_gaps.py  03_pricing.py  04_site_viability.py
dashboard/utils/: chart_helpers.py  snowflake_conn.py
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/bronze/: bronze_afdc_networks.sql  bronze_afdc_stations.sql  bronze_cer_rates.sql  bronze_circuit_electrique.sql  bronze_pricing_scrape.sql  bronze_statcan_population.sql  schema.yml
dbt/models/gold/: gold_coverage_by_fsa.sql  gold_coverage_by_province.sql  gold_coverage_corridor.sql  gold_network_pricing_comparison.sql  gold_site_viability_score.sql  schema.yml
dbt/models/silver/: schema.yml  silver_electricity_rates.sql  silver_networks.sql  silver_population_density.sql  silver_pricing_normalized.sql  silver_pricing_raw.sql  silver_stations.sql
dbt/seeds/: corridors.csv  province_codes.csv
ingestion/: __init__.py  config.py  loader.py
ingestion/sources/: afdc.py  cer_rates.py  circuit_electrique.py  pricing_scrapers.py  statcan.py
ingestion/sources/scrapers/: base.py  bc_hydro_ev.py  chargepoint_ca.py  electrify_canada.py  flo.py  ivy.py  (+2 more)
ingestion/tests/: test_scrapers.py  test_sources.py
terraform/: main.tf  outputs.tf  snowflake.tf  terraform.tfvars.example  variables.tf
