[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "charge-intel-canada"
version = "0.1.0"
description = "Canada EV charging coverage analytics"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["dashboard", "ingestion"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["ingestion/tests"]
